# DeMoD-StreamDB

./: README.markdown  README.md
C/: CMakeLists.txt  Makefile  README.md  StreamDB.nix  flake.nix
C/cmake/: StreamDBConfig.cmake.in  streamdb.pc.in
C/examples/: example.c
C/include/: streamdb.h  streamdb_wrapper.h
C/src/: streamdb.c  streamdb_wrapper.c
C/tests/: test_streamdb.c
Rust/: Cargo.toml  README.md  StreamDB.rs  cargo.toml  flake.nix
Rust/benches/: benchmarks.rs
Rust/include/: streamdb.h
Rust/src/: backend.rs  error.rs  ffi.rs  lib.rs  storage.rs  tests.rs  trie.rs
