[package]
name = "streamdb"
version = "2.0.0"
edition = "2021"
authors = ["DeMoD LLC"]
license = "LGPL-2.1-or-later"
description = "A lightweight, thread-safe embedded database using reverse trie for efficient suffix searches"
repository = "https://github.com/demod/streamdb"
documentation = "https://docs.rs/streamdb"
readme = "README.md"
keywords = ["database", "embedded", "trie", "key-value", "suffix-search"]
categories = ["database-implementations", "data-structures"]
rust-version = "1.70"

[lib]
name = "streamdb"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "streamdb-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[features]
default = ["std", "persistence"]
std = []
persistence = ["std"]
compression = ["lz4_flex"]
encryption = ["ring"]
async = ["tokio"]
ffi = []
cli = ["clap"]
full = ["persistence", "compression", "encryption", "async", "ffi", "cli"]

[dependencies]
# Core
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
log = "0.4"

# Persistent data structures
im = { version = "15.1", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
byteorder = "1.5"

# Checksums
crc32fast = "1.3"

# Caching
lru = "0.12"

# Optional: Compression
lz4_flex = { version = "0.11", optional = true }

# Optional: Encryption
ring = { version = "0.17", optional = true }

# Optional: Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "fs", "io-util"], optional = true }

# Optional: CLI
clap = { version = "4.0", features = ["derive"], optional = true }

# Platform-specific
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
env_logger = "0.11"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
